# aquordion

./: .gitignore  .pre-commit-config.yaml  README.md  mkdocs.yml  pyproject.toml  renovate.json
.github/ISSUE_TEMPLATE/: bug-report.yml  config.yml
.github/workflows/: run-tests-and-mypy.yml  test.yml
aquordion/: __init__.py  api_benchmarks.py  backend.py  backends.py  benchmark_api.py  benchmarks.py  benchmarks_circuits.py  circuit.py  circuits.py  conversion.py  decompose.py  dqc_benchmarks.py  execution.py  extensions.py  overlap.py  parameters.py  qubit_support.py  register.py  serialization.py  states.py  types.py  utils.py  utils_parameters.py  vqe_benchmarks.py
aquordion/analog/: addressing.py  device.py  hamiltonian_terms.py  parse_analog.py
aquordion/backends/: __init__.py  api.py  gpsr.py  jax_utils.py  utils.py
aquordion/backends/horqrux/: backend.py  config.py  convert_ops.py
aquordion/backends/pyqtorch/: backend.py  config.py  convert_ops.py
aquordion/blocks/: __init__.py  abstract.py  analog.py  block_to_tensor.py  composite.py  embedding.py  manipulate.py  matrix.py  primitive.py  utils.py
aquordion/constructors/: __init__.py  ala.py  feature_maps.py  hamiltonians.py  hea.py  iia.py  qft.py  rydberg_feature_maps.py  rydberg_hea.py  utils.py
aquordion/constructors/daqc/: __init__.py  daqc.py  gen_parser.py
aquordion/engines/: differentiable_backend.py
aquordion/engines/jax/: differentiable_backend.py  differentiable_expectation.py
aquordion/engines/torch/: differentiable_backend.py  differentiable_expectation.py
aquordion/exceptions/: __init__.py  exceptions.py
aquordion/noise/: protocols.py
aquordion/operations/: __init__.py  analog.py  control_ops.py  ham_evo.py  parametric.py  primitive.py
aquordion/transpile/: apply_fn.py  block.py  circuit.py  digitalize.py  flatten.py  invert.py  noise.py  transpile.py
docs/: benchmarks.md  index.md  stats_agpsr1AD.json  stats_agpsrAD.json  stats_dqc.json  stats_dqc_shots.json  stats_vqe_big.json  stats_vqe_noshots.json  stats_vqe_shots.json
docs/benchmarks/: api.md  dqc.md  vqe.md
docs/old_jsons/: stats_agpsr1AD.json  stats_agpsrAD.json  stats_vqe_big.json  stats_vqe_noshots.json  stats_vqe_shots.json
latest/: 404.html  index.html  objects.inv  sitemap.xml
latest/benchmarks/: index.html
latest/benchmarks/api/: index.html
latest/benchmarks/dqc/: index.html
latest/benchmarks/vqe/: index.html
latest/search/: search_index.json
tests/: conftest.py  strategies.py  test_api.py  test_api_run.py  test_benchmarks_circuits.py  test_expectation.py  test_run.py  test_timings.py  test_timings_agpsr.py  test_timings_vqe.py  tols.py
tests/api/: test_expectation.py  test_run.py  tols.py
tests/timings/: test_timings.py
tests/timings/dqc/: test_noshots.py  test_pde_noshots.py  test_pde_shots.py
tests/timings/vqe/: test_noshots.py  test_shots.py
